--- a/remix-app/app/ui/index/facade/facade.d.css
+++ b/remix-app/app/ui/index/facade/facade.d.css
@@ -1,8 +1,3 @@
-.padded-wrap {
-  padding: var(--section-top-padding-base) var(--section-side-padding)
-    var(--section-side-padding);
-}
-
 .facade {
   position: relative;
   height: 100vh;
